# ListingBot-backend

./: .env.exmaple  Dockerfile  README.md  auth.py  database.py  kroll-test.ipynb  main.py  pyproject.toml  run.cmd  scheduler.py  scraper.py  seeder.py  services.py  task.md  update_kroll_stock.py  wordpress.py
category/: kroll.json  kroll_part.json  rothco.json  ssi.json  ssi_part.json
legacy/: config.py  main.py  store-products copy.ipynb  test.ipynb  todo.md
legacy/playground/: compare-products.ipynb  kroll-categories.ipynb  scrape_automate copy.ipynb  scrape_automate.ipynb  ssis-categories-list.ipynb  store-products.ipynb
legacy/scraper/: chattanooga.py  kroll.py  rothco.py  ssi.py
legacy/util/: fetch.py  fetch_session.py  file.py  func.py  gsheet.py  sheet.py  wp.py
models/: __init__.py  kroll.py  products.py  rothco.py  ssi.py  user.py  wordpress.py
routers/: kroll.py  rothco.py  ssi.py  wp.py
scraper/: kroll.py  ssi.py
services/: background_tasks.py  db.py  suppliers.py  wordpress.py
tests/: test_api.py
